--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
-	{% include comments.html %}
+        {% if page.comments %}
+		{% include comments.html %}
+	{% endif %}
       </div>
     </div>
 
